[tool.poetry]
name = "nano-project-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1"
ydata-profiling = "^4"
virtualenv = "^20.24.5"
matplotlib = "~3.4"
jupyter = "^1.0.0"
ipykernel = "^6.25.2"
numpy = "~1.23"
scikit-learn = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
